<resources>
    <string name="app_name" translatable="false">Gendel</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_group">Group chat</string>
    <string name="title_change_password">Change password</string>
    <string name="settings_default_status">Online</string>
    <string name="settings_hint_input_name">Name/nickname</string>
    <string name="settings_toast_name_is_empty">Name/nickname cannot be empty!</string>
    <string name="settings_toast_email_is_empty">Email cannot be empty!</string>
    <string name="toast_data_update">Data updated</string>
    <string name="contact_default_fullname">Maxim Nechaev</string>
    <string name="contact_default_status">Online</string>
    <string name="message_hint">Message</string>
    <string name="voice_message">Voice message</string>
    <string name="create_quiz_title_hint">Enter question</string>
    <string name="create_quiz_block_answer_title">Answer options</string>
    <string name="create_quiz_add_answer_title">Add answer…</string>
    <string name="create_quiz_add_answer_count">You can still add 9 answers</string>
    <string name="create_quiz_block_settings_title">Settings</string>
    <string name="create_quiz_settings_multi">Multiple choice of answers</string>
    <string name="create_quiz_answer_hint">Answer</string>
    <string name="bottom_menu_main">Home</string>
    <string name="bottom_menu_favorite">Favorites</string>
    <string name="bottom_menu_chats">Chats</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="quiz_button_vote_text">Vote</string>
    <string name="register_enter_name">Enter name/nickname</string>
    <string name="register_enter_email">Enter email</string>
    <string name="register_enter_password">Enter password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="change_password_enter_new_password">Enter new password</string>
    <string name="change_password_confirm_new_password">Confirm new password</string>
    <string name="register_textView_hint_login">Log in!</string>
    <string name="register_sign_in_textView_hint">Already have an account?</string>
    <string name="register_textView_sign_in">Sign in</string>
    <string name="register_textView_log_in">Log in</string>
    <string name="register_log_in_textView_hint">Don\'t have an account yet?</string>
    <string name="register_textView_hint_sign_in">Sign in!</string>
    <string name="register_textView_forgot_password">Forgot password?</string>
    <string name="start_date_title">Start bill date</string>
    <string name="end_date_title">Planned order date</string>
    <string name="member_count_title">Number of participants</string>
    <string name="shipping_cost_title">Cost of delivery</string>
    <string name="search">Search</string>
    <string name="enter_store_name">Enter store name</string>
    <string name="new_bill_cost_title">Cost of delivery</string>
    <string name="new_bill_tags_title">Tags</string>
    <string name="new_bill_end_date_title">End date</string>
    <string name="calendar_button_confirm">Select</string>
    <string name="calendar_button_cancel">Cancel</string>
    <string name="chat_attach_image_title">Image</string>
    <string name="chat_attach_file_title">File</string>
    <string name="chat_attach_graffiti_title">Graffiti</string>
    <string name="chat_attach_quiz_title">Quiz</string>
    <string name="profile_exit">EXIT</string>
    <string name="chat_settings_notification_title">Notification</string>
    <string name="chat_settings_attachments_title">Group chat attachments</string>
    <string name="chat_settings_clear_history_title">Clear history</string>
    <string name="chat_settings_exit_block_title">Leave chat and delete history</string>
    <string name="chat_settings_leave_chat_title">Leave chat</string>
    <string name="email_verification">Confirm email to access all functions</string>
    <string name="verified_email">Confirm email</string>
    <string name="message_from_you">You</string>
    <string name="profile_settings_change_password_title">Change password</string>
    <string name="profile_settings_confirm">Confirm</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="chat_context_menu_reply">Reply</string>
    <string name="chat_context_menu_forward">Forward</string>
    <string name="chat_context_menu_edit">Edit</string>
    <string name="chat_context_menu_delete">Delete</string>
    <string name="chat_context_menu_copy">Copy</string>
    <string name="chat_context_menu_pin">Pin</string>
    <string name="delete_message_title">Delete message?</string>
    <string name="delete_for_all_checkbox_title">Delete for all</string>
    <string name="delete_for_all_dialog_delete">Delete</string>
    <string name="delete_for_all_dialog_cancel">Cancel</string>
    <string name="error_deleting_message">Error deleting message</string>
    <string name="account_login_error">Account login error</string>
    <string name="new_bill">New bill</string>
    <string name="choose_end_date">Choose end date</string>
    <string name="enter_delivery_cost">Enter delivery cost</string>
    <string name="сhoose_currency">Choose currency</string>
    <string name="count_member_title">Members - </string>
    <string name="no_message_yet">No message yet</string>
    <string name="record">Record</string>
    <string name="max_answers">Already added the maximum number of answers</string>
    <string name="bill_in_favorites">Bill added to favorites</string>
    <string name="bill_remove_favorites">Bill removed from favorites</string>
    <string name="welcome">Welcome</string>
    <string name="register_not_all_field">Not all fields are filled</string>
    <string name="signin_welcome">Welcome. Registration completed successfully. Confirm email!</string>
    <string name="verification_letter">The letter has been sent!</string>
    <string name="email_sending_error">Email sending error!</string>
    <string name="online">online</string>
    <string name="offline">was recently</string>
    <string name="choose_tags_add_tag">+Add tag</string>
    <string name="choose_tags_save">Save</string>
    <string name="choose_tags_cancel">Cancel</string>
    <string name="choose_tag_new_tag">New tag</string>
    <string name="sharp">#</string>
    <string name="delete_message">Are you sure you want to delete the message?</string>
    <string name="added_to_clipboard">Copied to clipboard</string>
    <string name="list_tag_viewer_ok">Ок</string>
    <string name="create">Create</string>
    <string name="download_menu_confirm">Download and install</string>
    <string name="new_version_is_available">New version is available</string>
    <string name="download_menu_version">Version - %1$s</string>
    <string name="download_menu_cancel">Cancel</string>
    <string name="downloading">downloading</string>
    <string name="new_quiz">New quiz</string>
    <string name="add_answer_hint">Please enter at least 1 answer</string>
    <string name="bill_load_error">Error loading bills</string>
    <string name="connection_error">Connection error</string>
    <string name="add_new_bill_error">Error when adding a new bill</string>
    <string name="choose_tag_dialog_title">Chose tags</string>
    <string name="registration_error">Registration error</string>

    <plurals name="count_members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
        <item quantity="few">%d members</item>
        <item quantity="many">%d members</item>
    </plurals>

    <plurals name="count_voters">
        <item quantity="one">%d vote</item>
        <item quantity="few">%d votes</item>
        <item quantity="other">%d votes</item>
        <item quantity="many">%d votes</item>
    </plurals>

    <plurals name="count_answers">
        <item quantity="one">You can still add %d answer</item>
        <item quantity="few">You can still add %d answers</item>
        <item quantity="other">You can still add %d answers</item>
        <item quantity="many">You can still add %d answers</item>
    </plurals>

</resources>