<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chat_context_menu_reply"
        android:title="@string/chat_context_menu_reply" />
    <item
        android:id="@+id/chat_context_menu_forward"
        android:title="@string/chat_context_menu_forward" />
    <item
        android:id="@+id/chat_context_menu_edit"
        android:title="@string/chat_context_menu_edit" />
    <item
        android:id="@+id/chat_context_menu_pin"
        android:title="@string/chat_context_menu_pin" />
    <item
        android:id="@+id/chat_context_menu_copy"
        android:title="@string/chat_context_menu_copy" />
    <item
        android:id="@+id/chat_context_menu_delete"
        android:title="@string/chat_context_menu_delete" />
</menu>