<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave_background"
    tools:context=".ui.screens.register.RegisterSignInFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/logo_with_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_login_editText_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="45dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/register_edittext_selector"
        android:hint="@string/register_enter_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/app_small_padding"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/pink"
        android:textColorHint="@color/blue_pink"
        android:textSize="@dimen/registerNormalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo" />

    <EditText
        android:id="@+id/register_login_editText_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="45dp"
        android:autofillHints="password"
        android:background="@drawable/register_edittext_selector"
        android:hint="@string/register_enter_password"
        android:inputType="textPassword"
        android:padding="@dimen/app_small_padding"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/pink"
        android:textColorHint="@color/blue_pink"
        android:textSize="@dimen/registerNormalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_login_editText_email" />

    <TextView
        android:id="@+id/register_login_button_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/app_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_textView_forgot_password"
        android:textColor="@color/white_pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_login_editText_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_button_login"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/ripple_effect_register_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/register_login_textView_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_textView_log_in"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/register_login_textView_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_log_in_textView_hint"
        android:textColor="@color/violet"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/register_login_textView_button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_login_textView_button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_textView_hint_sign_in"
        android:textColor="@color/pink"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>