<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.settings.SettingsFragment">

    <EditText
        android:id="@+id/profile_settings_edittext_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/profile_item_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:textColorHint="@color/pink"
        android:hint="@string/settings_hint_input_name"
        android:inputType="text|textCapSentences"
        tools:ignore="Autofill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_settings_edittext_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/app_margin"
        android:background="@drawable/profile_item_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/pink"
        android:textColorHint="@color/pink"
        android:textSize="20sp"
        android:hint="@string/register_enter_email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_settings_edittext_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_settings_change_password_root"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="20dp"
        android:background="@drawable/profile_settings_ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_settings_edittext_email">

        <ImageView
            android:id="@+id/profile_settings_change_password_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:scaleType="centerCrop"
            app:tint="@color/pink"
            android:src="@drawable/ic_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/profile_settings_change_password_title"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/pink"
            android:layout_marginStart="10dp"
            android:text="@string/profile_settings_change_password_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_settings_change_password_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_settings_confirm"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/ripple_effect_register_button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_settings_change_password_root">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings_confirm"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>