<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choose_tags_search_root"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:background="@drawable/toolbar_search_background"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="50dp"
            android:paddingBottom="12dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/blue_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/editText_search"
            app:layout_constraintEnd_toEndOf="@id/editText_search"
            app:layout_constraintTop_toTopOf="@id/editText_search"
            app:tint="@color/violet"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/choose_tags_add_tag_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ripple_effect_add_tags"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/choose_tags_add_tag"
        android:textColor="@color/pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_tags_search_root" />

    <LinearLayout
        android:id="@+id/choose_tags_new_tag_root"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_tags_add_tag_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/sharp"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/choose_tags_add_new_tag_edt"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/edittext_selector"
            android:hint="@string/choose_tag_new_tag"
            android:textSize="20sp"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/pink"
            android:textColorHint="@color/pink" />

        <ImageButton
            android:id="@+id/choose_tags_add_new_tag_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white_pink"
            android:scaleType="center"
            android:src="@drawable/ic_create_quiz_add_answer"
            app:tint="@color/pink"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/choose_tags_container_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_tags_search_root">

        <LinearLayout
            android:id="@+id/choose_tags_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>